# eltec2rdf

./: #notes.org#  README.md  pyproject.toml
eltec2rdf/: converter.py  converter_abc.py  link_extractor.py  models.py  rdfgenerators.py  utils.py
eltec2rdf/bindings/: __init__.py  bindings_generators.py  models.py
eltec2rdf/extractors/: __init__.py  _bindings_extractor.py  bindings_extractor.py  link_extractor.py  models.py  tree_extractors.py
eltec2rdf/extractors/xpath_extractors/: deu_extractors.py  spa_extractors.py
eltec2rdf/output/: eltec_cze.ttl  eltec_deu.ttl  eltec_eng.ttl  eltec_fra.ttl  eltec_spa.ttl
eltec2rdf/utils/: helpers.py  utils.py
eltec2rdf/vocabs/: vocabs.py
