[tool.poetry]
name = "eltec2rdf"
version = "0.1.0"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^2.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
